Rename database Vendor to Engine
- Improve classes with record and record pattern
- Upgrade dependencies
- Clean sonar